# rkbx_choreographer

./: CMakeLists.txt  README.md  example_choreo.tsv  offsets.txt  rkbx_choreographer.cpp  rkbx_choreographer.h
src/: beat_utils.h  beatkeeper.h  choreographer.h  choreoparser.h  offsets.h  rkbx_choreographer.cpp
